moltiverse-zoo, first demonstration with working agents and UI

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,8 @@ USER.md
 .agent/*.json
 !.agent/workflows/
 local/
+
+MOLTIVERSE_ZOO_README.md
+.molitverse-zoo-dev/
+PROJECT_SUMMARY.md
+QUICKSTART.md
