--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_AUTH_TOKEN=your_auth_token_here
 # Must be a WhatsApp-enabled Twilio number, prefixed with whatsapp:
 TWILIO_WHATSAPP_FROM=whatsapp:+17343367101
+
+# Reown AppKit
+REOWN_PROJECT_ID=
+MONAD_CHAIN_ID=143
