--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "android:install": "cd apps/android && ./gradlew :app:installDebug",
     "android:run": "cd apps/android && ./gradlew :app:installDebug && adb shell am start -n ai.openclaw.android/.MainActivity",
     "android:test": "cd apps/android && ./gradlew :app:testDebugUnitTest",
-    "build": "pnpm canvas:a2ui:bundle && tsdown && pnpm build:plugin-sdk:dts && node --import tsx scripts/write-plugin-sdk-entry-dts.ts && node --import tsx scripts/canvas-a2ui-copy.ts && node --import tsx scripts/copy-hook-metadata.ts && node --import tsx scripts/write-build-info.ts && node --import tsx scripts/write-cli-compat.ts",
+    "build": "pnpm install --frozen-lockfile && pnpm run build-ui && if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install python-dotenv web3 eth-account; fi",
+    "build-ui": "pnpm dlx esbuild skills/moltiverse-zoo/ui/reown-appkit-entry.js --bundle --format=iife --global-name=ReownAppKit --outdir=skills/moltiverse-zoo/ui/build && mv skills/moltiverse-zoo/ui/build/reown-appkit-entry.js skills/moltiverse-zoo/ui/reown-appkit.bundle.js",
     "build:plugin-sdk:dts": "tsc -p tsconfig.plugin-sdk.dts.json",
     "canvas:a2ui:bundle": "bash scripts/bundle-a2ui.sh",
     "check": "pnpm format:check && pnpm tsgo && pnpm lint",
